[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "pyastar2d"
version = "1.0.6"
authors = [{name = "Hendrik Weideman", email = "hjweide@gmail.com"}]
description = "A simple implementation of the A* algorithm for path-finding on a two-dimensional grid."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/hjweide/pyastar2d"


[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]
